[gd_scene load_steps=14 format=2]

[ext_resource path="res://MainMenu/mainMenuGUI/mainMenuGUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Textures/playTriangle.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/fredokaOneRegular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Textures/settingsTexture.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 180
use_filter = true
extra_spacing_char = -7
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 1, 1, 1, 0.156863 )
shadow_size = 20

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 1, 1, 1, 0.156863 )
shadow_size = 20

[sub_resource type="DynamicFont" id=5]
size = 60
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 5 )

[node name="mainMenuGUICanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="shopPlaySettingsGUIMain" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -539.0
margin_bottom = -289.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hContainer" type="HBoxContainer" parent="shopPlaySettingsGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.52588e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="storeButtonContainer" type="MarginContainer" parent="shopPlaySettingsGUIMain/hContainer"]
margin_right = 357.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 37
custom_constants/margin_top = 30
custom_constants/margin_left = 37
custom_constants/margin_bottom = 30

[node name="storeButton" type="TextureButton" parent="shopPlaySettingsGUIMain/hContainer/storeButtonContainer"]
margin_left = 37.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 220.0
expand = true
stretch_mode = 5

[node name="playButtonContainer" type="MarginContainer" parent="shopPlaySettingsGUIMain/hContainer"]
margin_left = 361.0
margin_right = 718.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="playButton" type="TextureButton" parent="shopPlaySettingsGUIMain/hContainer/playButtonContainer"]
margin_right = 357.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="settingsButtonContainer" type="MarginContainer" parent="shopPlaySettingsGUIMain/hContainer"]
margin_left = 722.0
margin_right = 1080.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 37
custom_constants/margin_top = 30
custom_constants/margin_left = 37
custom_constants/margin_bottom = 30

[node name="settingsButton" type="TextureButton" parent="shopPlaySettingsGUIMain/hContainer/settingsButtonContainer"]
margin_left = 37.0
margin_top = 30.0
margin_right = 321.0
margin_bottom = 220.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="titleLabelContainer" type="Control" parent="."]
anchor_right = 1.0
margin_top = 208.0
margin_bottom = 658.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabelMargin" type="MarginContainer" parent="titleLabelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabel" type="Label" parent="titleLabelContainer/titleLabelMargin"]
margin_right = 1080.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Contrast
Jump"
align = 1
valign = 1

[node name="titleLabelTween" type="Tween" parent="."]

[node name="playButtonTween" type="Tween" parent="."]

[node name="bestScoreAndStageAndLevelContainer" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -160.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bestScoreAndStageAndLevelSplitter" type="VBoxContainer" parent="bestScoreAndStageAndLevelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="challengeLevelMargin" type="MarginContainer" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter"]
margin_right = 1080.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 3
custom_constants/margin_left = 100
custom_constants/margin_bottom = 3

[node name="challengeLevelPanel" type="Panel" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter/challengeLevelMargin"]
margin_left = 100.0
margin_top = 3.0
margin_right = 980.0
margin_bottom = 94.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="challengeLebelLabel" type="Label" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter/challengeLevelMargin"]
margin_left = 100.0
margin_top = 3.0
margin_right = 980.0
margin_bottom = 94.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "test"
align = 1
valign = 1
autowrap = true

[node name="bestScoreMargin" type="MarginContainer" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter"]
margin_top = 101.0
margin_right = 1080.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 3
custom_constants/margin_left = 100
custom_constants/margin_bottom = 3

[node name="bestScorePanel" type="Panel" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter/bestScoreMargin"]
margin_left = 100.0
margin_top = 3.0
margin_right = 980.0
margin_bottom = 94.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bestScoreLabel" type="Label" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter/bestScoreMargin"]
margin_left = 100.0
margin_top = 3.0
margin_right = 980.0
margin_bottom = 94.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "test"
align = 1
valign = 1
autowrap = true

[node name="bestStageMargin" type="MarginContainer" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter"]
margin_top = 202.0
margin_right = 1080.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 3
custom_constants/margin_left = 100
custom_constants/margin_bottom = 3

[node name="bestStagePanel" type="Panel" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter/bestStageMargin"]
margin_left = 100.0
margin_top = 3.0
margin_right = 980.0
margin_bottom = 95.0
custom_styles/panel = SubResource( 4 )

[node name="bestStageLabel" type="Label" parent="bestScoreAndStageAndLevelContainer/bestScoreAndStageAndLevelSplitter/bestStageMargin"]
margin_left = 100.0
margin_top = 3.0
margin_right = 980.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "test"
align = 1
valign = 1

[node name="bestScoreAndStageAndLevelTween" type="Tween" parent="."]

[node name="storeButtonTween" type="Tween" parent="."]

[node name="playMenuContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -589.0
margin_right = 191.0
margin_bottom = -239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playMenuPanel" type="Panel" parent="playMenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playMenuVSplitter" type="VBoxContainer" parent="playMenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="endlessButtonMargin" type="MarginContainer" parent="playMenuContainer/playMenuVSplitter"]
margin_right = 382.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="endlessButton" type="Button" parent="playMenuContainer/playMenuVSplitter/endlessButtonMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 362.0
margin_bottom = 163.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )

[node name="challengeButtonMargin" type="MarginContainer" parent="playMenuContainer/playMenuVSplitter"]
margin_top = 177.0
margin_right = 382.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="challengeButton" type="Button" parent="playMenuContainer/playMenuVSplitter/challengeButtonMargin"]
margin_left = 20.0
margin_top = 10.0
margin_right = 362.0
margin_bottom = 153.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )

[node name="playMenuTween" type="Tween" parent="."]

[node name="settingsButtonTween" type="Tween" parent="."]

[connection signal="pressed" from="shopPlaySettingsGUIMain/hContainer/storeButtonContainer/storeButton" to="." method="_on_storeButton_pressed"]
[connection signal="pressed" from="shopPlaySettingsGUIMain/hContainer/playButtonContainer/playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="shopPlaySettingsGUIMain/hContainer/settingsButtonContainer/settingsButton" to="." method="_on_settingsButton_pressed"]
[connection signal="pressed" from="playMenuContainer/playMenuVSplitter/endlessButtonMargin/endlessButton" to="." method="_on_endlessButton_pressed"]
[connection signal="pressed" from="playMenuContainer/playMenuVSplitter/challengeButtonMargin/challengeButton" to="." method="_on_challengeButton_pressed"]
